savvy-macro/tests/cases/simple_cases.stderr
error: non-ident is not supported
 --> tests/cases/simple_cases.rs:4:12
  |
4 | fn foo_ref(&x: i32) -> savvy::Result<()> {}
  |            ^^

error: non-ident is not supported
 --> tests/cases/simple_cases.rs:7:16
  |
7 | fn foo_mut_ref(&mut x: i32) -> savvy::Result<()> {}
  |                ^^^^^^

error: Unsupported type
  --> tests/cases/simple_cases.rs:10:24
   |
10 | fn foo_unsupported1(x: usize) -> savvy::Result<()> {}
   |                        ^^^^^

error: function must have return type
  --> tests/cases/simple_cases.rs:12:1
   |
12 | #[savvy]
   | ^^^^^^^^
   |
   = note: this error originates in the attribute macro `savvy` (in Nightly builds, run with -Z macro-backtrace for more info)

error: the return type must be either syn::Result<SEXP> or syn::Result<()>
  --> tests/cases/simple_cases.rs:16:34
   |
16 | fn foo_wrong_return_type(x: i32) -> i32 {}
   |                                  ^^^^^^

error: For safety, a function that takes `self` and returns `Self` is not allowed
  --> tests/cases/simple_cases.rs:22:5
   |
22 |     fn foo_self(&self) -> Self {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
